test/Fail/Issue3233.agda
A : Set

B : Setâ‚
B = Set

C : Set
