test/Fail/Issue3233.err
Issue3233.agda:1.1-6.2: error: [MissingDefinitions]
The following names are declared but not accompanied by a
definition: A, C
